# Wagle

./: CMakeLists.txt  README.md  chat_room.h  message.h
Wagle/: .gitignore  CMakeLists.txt  README.md
Wagle/include/chat/: chat_room.h  chat_room_manager.h  user.h
Wagle/include/protocol/: message.h
Wagle/include/socket/: socket_manager.h
Wagle/src/client/: client_main.cpp
Wagle/src/common/: chat_room.cpp  chat_room_manager.cpp  message.cpp
Wagle/src/server/: server_main.cpp  socket_manager.cpp  socket_manager.cpp:Zone.Identifier
include/chat/: chat_room.h  chat_room_manager.h  user.h
include/protocol/: message.h
include/socket/: socket_manager.h
src/client/: client_main.cpp
src/common/: chat_room.cpp  chat_room_manager.cpp  message.cpp  user.cpp
src/server/: server_main.cpp  socket_manager.cpp
